--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   },
   "bugs": {
     "url": "https://github.com/mrmartineau/gatsby-starter-code-notes/issues"
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
