--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "gatsby": "^2.23.9",
+    "gatsby-cli": "^2.12.60",
     "gatsby-theme-code-notes": "1.10.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
